--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2020 Git Training
-	Some silly changes from master branch
+	Adding changes before rebasing conflicts
 -->
 <head>
 	<title>Silly changes on master</title>
@@ -18,8 +18,7 @@
 	<main class="container">
 	<!-- Junk file content -->
 		<p>
-			Just stuff for now,
-			Not sure if we should replace this or not
+			Just NOTHING BUT TROUBLE
 		</p>
 	</main>
 	<footer class="container">
