--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2020 Git Training
-	Adding changes before rebasing conflicts
 -->
 <head>
-	<title>Silly changes on master</title>
+	<title>Silly changes on master a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
