--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2020 Git Training
 -->
 <head>
-	<title>Silly changes on master a little repo</title>
+	<title>Updating Title for Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Junk file content -->
 		<p>
-			Just NOTHING BUT TROUBLE
+			Adding more important content here.
 		</p>
 	</main>
 	<footer class="container">
