Updating for tag 1.2

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2020 Git Training
 -->
 <head>
-	<title>Updating Title for Multiple Stash Example</title>
+	<title>Comparing for tagging example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
